[gd_scene load_steps=5 format=2]

[ext_resource path="res://common/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://challenges/week10/scenes/trafficLight/traffic_light.gd" type="Script" id=2]
[ext_resource path="res://common/sfx/button/beep.mp3" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="traffic_light" type="Node2D"]
position = Vector2( 368, 280 )
script = ExtResource( 2 )

[node name="lights" type="Node2D" parent="."]
scale = Vector2( 0.6, 0.6 )

[node name="light_left" type="Polygon2D" parent="lights"]
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
antialiased = true
polygon = PoolVector2Array( 26, 49, -1, 57, -33, 48, -48, 27, -54, 0, -46, -27, -27, -47, 0, -51, 24, -43, 41, -27, 48, 0, 42, 31 )

[node name="light_center" type="Polygon2D" parent="lights"]
position = Vector2( 129, 0 )
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
antialiased = true
polygon = PoolVector2Array( 26, 49, -1, 57, -33, 48, -48, 27, -54, 0, -46, -27, -27, -47, 0, -51, 24, -43, 41, -27, 48, 0, 42, 31 )

[node name="light_right" type="Polygon2D" parent="lights"]
position = Vector2( 261, 0 )
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
antialiased = true
polygon = PoolVector2Array( 26, 49, -1, 57, -33, 48, -48, 27, -54, 0, -46, -27, -27, -47, 0, -51, 24, -43, 41, -27, 48, 0, 42, 31 )

[node name="Label" type="Label" parent="."]
margin_left = -32.0
margin_top = -72.0
margin_right = 185.0
margin_bottom = -56.0
custom_fonts/font = SubResource( 1 )
text = "Get ready!"
align = 1

[node name="traffic_light_timer" type="Timer" parent="."]
one_shot = true

[node name="BeepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="traffic_light_timer" to="." method="_on_traffic_light_timer_timeout"]
